# minisearch-indexrs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
example/: minimal_config.json  minimal_data.json
minisearch-cli/: main.js  package-lock.json  package.json
random-articles/: main.js  package-lock.json  package.json
src/: errors.rs  index.rs  main.rs  serializer.rs
