[package]
name = "minisearch-indexrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
regex = "1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
