[package]
name = "minisearch-indexrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
patricia_tree = "0.3.1"
regex = "1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
serde_test = "1.0.117"
assert-json-diff = "2.0.1"
